# llaunchpad

./: .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  bundle.sh  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
assets/: AppIcon.icns
src/: App.tsx  config.rs  controller.rs  index.css  main.rs  main.tsx  model.rs  repository.rs  terminal.rs  view.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  model.rs  repository.rs  terminal.rs  test_util.rs
src-tauri/src/ollama/: agents.rs  mod.rs  models.rs
src/components/: AgentRow.tsx  ErrorBoundary.tsx
src/lib/: api.ts  types.ts
src/ollama/: agents.rs  launch.rs  mod.rs  models.rs
src/ui/: badge.tsx  button.tsx  input.tsx  select.tsx
ui/: app.slint
