[package]
name = "llaunchpad"
version = "0.7.0"
edition = "2021"
description = "A cross-platform launcher for Ollama coding agents with cloud models"
license = "MIT"
repository = "https://github.com/draugvar/llaunchpad"

[lib]
name = "llaunchpad_lib"
path = "src-tauri/src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "llaunchpad"
path = "src-tauri/src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
anyhow = "1"
async-trait = "0.1"
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
